2008-04-24  Mike Frysinger  <vapier@gentoo.org>

   * src/tap/usbconn/libusb.c (usbconn_libusb_connect): Use the
     usb_get_busses() function rather than the usb_busses global
     variable due to portability issues (like with libusb-win32).
   * src/jtag.c (jtag_readline_loop): [ 1950315 ] Fix quiting when
     using the non readline version.
   * configure.ac: [ 1950061 ] Look for the ChangeLog in $srcdir.

2008-04-19  Kolja Waschk <kawk>

   * src/tap/parport/ftd2xx.c: SetBaudRate to 3E6, not 48E6. Should
     fix [ 1925509 ] ftd2xx: SetBaudRate fails with FT245
   * src/flash/intel.c: Handle chips that support "Mitsubishi
     standard/enhanced command set" just like Intel chips. Need
     to do more research about the differences (if any) [1946559]
   * src/tap/cable/usbblaster.c: clock() at highest possible rate
     using the byte shift mode for n>=8 (Thanks M. Banditt)
   * include/cmd.h, src/cmd/cmd.c, src/jtag.c: [ 1946331 ] command
     completion support (by Mike Frysinger)
   * configure.ac, acinclude.m4: [ 1946114 ] make AC_PROG_SED
     workaround sane (Mike Frysinger)
   * include/jtag.h, src/cmd/detect.c, src/tap/detect.c:
     [ 1946119 ] fixup relocatable jtag in detection (M.Frysinger)
   * src/cmd/frequency.c: ensure that cable is initialized. Fixes
     [ 1933736 ] "frequency" command segfaults without args

2008-04-19  Arnim Laeuger  <arniml@users.sourceforge.net>

   * src/bsdl/Makefile.am, src/svf/Makefile.am: ensure that
     bsdl_bison.h is generated prior to compiling bsdl_flex.c and
     bsdl_bison.c
     [ 1943435 ] fixup bsdl parallel build issue (part2)

2008-04-13  Kolja Waschk <kawk>

  * src/tap/parport/ftd2xx.c, src/tap/usbconn/libusb.c, src/lib/fclock.c,
    src/jtag.c, src/flash/amd_flash.c, src/flash/amd.c, src/flash/jedec.c,
    src/svf/svf.c, configure.ac, doc/UrJTAG.txt: Provide variants of
    usleep, frealtime, mkdir for [ 1838732 ] EXE built with MinGW

2008-04-11  Kolja Waschk <kawk>
